welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:20: error: '=' expected but identifier found.
		def faire V4 {
                          ^MethodsPicture:26: error: illegal start of simple expression
		def marquersol( c:color) {
^MethodsPicture:28: error: ';' expected but 'def' found.
			leveBrosse } def faireV3(){
                                     ^