welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {


	def faireV(){ for( n <-1 to 4){ 
		avance()
		setCouleurBrosse() 
		marquersol() 
		avance() 
		gauche() 
		avance() 
		marquersol() 
		recule() 
		droite() 
		avance() 
		marquersol() 
		avance() gauche() 
		} 
		} 

		def faire V4 {
			faireV (color.YELLOW)
			faireV (color.RED)
			faireV (color.BLUE)
			faireV (color.GREEN)
		}
		def marquersol( c:color) {
			baisseBrosse() 
			leveBrosse } def faireV3(){
				for( n <- 1 to 3 ){ faireV() 
				for ( n <- 1 to 5){avance()
				} 
				} 
				}
				for( n <-1 to 3){ 
					faireV3() gauche() 
					for ( n <- 1 to 5){ 
						avance() } droite() }
}
